testsuites/LLT/compiler/Diagnose/lex_test/lex_unknown_start_of_token/case13.expect.out
error: unknown start of token: \u{0000}
  ==> case13.cj:15:12:
   | 
15 |     camsjie ${\u{0000}}
   |               ^^^^^^^^ unknown start of token: \u{0000}
   | 

1 error generated, 1 error printed.
